# car-ecu-dev-agent

./: README.md  README_EN.md  README_SHORT.md
.claude/: settings.local.json
.playwright-mcp/: page-2026-07-02T11-26-57-191Z.yml
car-ecu-dev-agent/: README.md  pyproject.toml  requirements.txt  run_codegen_gate.py  run_matrix.py  run_poc_pipeline.py
car-ecu-dev-agent/adapter/: __init__.py  _util.py  agent_spec_loader.py  domain_loader.py  domain_profile.py  domain_stage_agent.py  forward_trace.py  generic_pipeline.py  pipeline_factory.py  skill_parser.py  tlf_codegen_tool.py  tlf_consistency_gate.py
car-ecu-dev-agent/domains/: __init__.py
car-ecu-dev-agent/domains/tlf35584/: pipeline.py  profile.py
car-ecu-dev-agent/engine/vda_agent/: __init__.py  factory.py
car-ecu-dev-agent/engine/vda_agent/core/: __init__.py  base_agent.py  llm_client.py  perception.py  tools.py
car-ecu-dev-agent/engine/vda_agent/knowledge/: aspice_swe.md
car-ecu-dev-agent/engine/vda_agent/knowledge/patterns/: state_machine.md
car-ecu-dev-agent/engine/vda_agent/stages/: __init__.py  architecture_agent.py  coding_agent.py  detailed_design_agent.py  scenario.py
car-ecu-dev-agent/engine/vda_agent/tools/: __init__.py  autosar_arxml.py  compiler.py  hil_sil_runner.py  misra_checker.py  unit_test_runner.py
car-ecu-dev-agent/gui/: api.py  index.html  server.py
car-ecu-dev-agent/tests/: test_m2.py  test_m3.py  test_poc_p0_p3.py  test_poc_p4_p6.py  test_skill_parser.py
docs/: ARCHITECTURE.md  PoC实施方案-TLF35584域贯通.md  车载域控Agent工程合并可行性分析报告.md  车载域控嵌入式开发Agent设计方案.md
(+45 files in other folders)
