[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "car-ecu-dev-agent"
version = "0.1.0"
description = "V-Model SDLC agent pipeline for automotive ECU driver development"
requires-python = ">=3.10"
dependencies = [
    "jinja2>=3.1",
]

[project.optional-dependencies]
test = ["pytest>=7.0"]

[project.scripts]
run-pipeline = "run_poc_pipeline:main"
gui-server = "gui.server:main"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
